--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
     <title>ClimaTempo</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="src/assets/favicon-32x32.png" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./assets/images/icons/IconClimaTempo.ico"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
